app/assets/stylesheets/application.scss
@import "bootstrap";
/*
 *= require jquery-ui
 */
 /*
 *= require jquery-ui/core
 *= require jquery-ui/theme
 */

// @font-face {
//   font-family: 'Open Sans';
//   src:font-url('Open_Sans/OpenSans-Regular.ttf')
// }

// @font-face {
//   font-family: 'Sansita';
//   src:font-url('Sansita/Sansita-Regular.ttf')
// }

/*
 * Globals
 */

/* Links */
a,
a:focus,
a:hover {
  color: #fff;
}

/* Custom default button */
.btn-secondary,
.btn-secondary:focus {
  color: #333;
  text-shadow: none; /* Prevent inheritance from `body` */
  background-color: #fff;
  border: .05rem solid #fff;
}
.btn-secondary:hover {
  color: #fff;
  text-shadow: none; /* Prevent inheritance from `body` */
  background-color: #333;
  border: .05rem solid #fff;
}


/*
 * Base structure
 */

body {
  background-color: #333;
}

html,
body {
  height: 100%;
  // font-family: 'Open Sans', sans-serif;
}
body {
  color: #fff;
  text-align: center;
  text-shadow: 0 .05rem .1rem rgba(0,0,0,.5);
}

// h1, .h1,
// h2, .h2,
// h3, .h3,
// h4, .h4,
// h5, .h5,
// h6, .h6 {
//   font-family: 'Sansita', sans-serif;
// }

/* Extra markup and styles for table-esque vertical and horizontal centering */
.site-wrapper {
  display: table;
  width: 100%;
  height: 100%; /* For at least Firefox */
  min-height: 100%;
  -webkit-box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
          box-shadow: inset 0 0 5rem rgba(0,0,0,.5);
}
.site-wrapper-inner {
  display: table-cell;
  vertical-align: top;
}
.cover-container {
  margin-right: auto;
  margin-left: auto;
}

/* Padding for spacing */
.inner {
  padding: 2rem;
}


/*
 * Header
 */

.masthead {
  margin-bottom: .5rem;
}

.masthead-brand {
  margin-bottom: 0;
}

.nav-masthead .nav-link {
  padding: .25rem 0;
  font-weight: bold;
  color: rgba(255,255,255,.5);
  background-color: transparent;
  border-bottom: .25rem solid transparent;
}

.nav-masthead .nav-link:hover,
.nav-masthead .nav-link:focus {
  border-bottom-color: rgba(255,255,255,.25);
}

.nav-masthead .nav-link + .nav-link {
  margin-left: 1rem;
}

.nav-masthead .active {
  color: #fff;
  border-bottom-color: #fff;
}

@media (min-width: 48em) {
  .masthead-brand {
    float: left;
  }
  .nav-masthead {
    float: right;
  }
}


/*
 * Cover
 */

.cover {
  padding: 0 1.5rem;
  margin: 80px 0;
}
.cover .btn-lg {
  padding: .75rem 1.25rem;
  font-weight: bold;
}


/*
 * Footer
 */

.mastfoot {
  color: rgba(255,255,255,.5);
}


/*
 * Affix and center
 */

@media (min-width: 40em) {
  /* Pull out the header and footer */
  .masthead {
    position: fixed;
    top: 0;
    z-index: 10;
  }
  .mastfoot {
    position: fixed;
    bottom: 0;
    z-index: -1;
  }
  /* Start the vertical centering */
  .site-wrapper-inner {
    vertical-align: middle;
  }
  /* Handle the widths */
  .masthead,
  .mastfoot,
  .cover-container {
    width: 100%; /* Must be percentage or pixels for horizontal alignment */
  }
}

@media (min-width: 62em) {
  .masthead,
  .mastfoot,
  .cover-container {
    width: 65rem;
  }
}

/*
 * Custom styles
 */

.row iframe {
  // float: right;
  // margin-top: 80px;
}

// .app-container {
//   display: inline-block;
// }

.home-button {
  
}

// .inner-cover { 
//   margin-top: 52%;
// }
.center {
  display: flex;
  justify-content: center;
  align-items: center;
}

.home-container {
  margin: 100px 0;
}

.nav-item {
  padding: 0 10px;
}

.btn-group-wrap {
  float: left;
}

.navbar-inner{
  float: left;
}

.list-unstyled li {
  text-decoration: none;
  display: inline;
  float: left;
}

.subnav {
  margin:0;
  top: 0px;
  z-index: 1020;
  background-color: rgba(247,247,247,0.20);
  border-bottom: 1px solid black;
  padding: 0px 0px 5px 0px;
}

.subnav.affix {
    position: fixed;
    top: 0;
    width: 100%;
    z-index:10;
}

